Details
-
Bug
-
Status: Resolved
-
Blocker
-
Resolution: Fixed
-
Impala 2.3.0
-
None
-
DB: tpch_nested_parquet
Description
Query:
SELECT IF(True, LAG(219, 77) OVER (ORDER BY t3.pos DESC, t3.pos DESC), 423) AS int_col, t3.pos, t3.pos AS int_col_1 FROM customer t1 INNER JOIN t1.c_orders t2 RIGHT JOIN t1.c_orders t3 ON (t3.item.o_totalprice) = (t2.item.o_totalprice)
Stack Trace:
#0 0x00007fd91fd9fcc9 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56 #1 0x00007fd91fda30d8 in __GI_abort () at abort.c:89 #2 0x00007fd9219b29c5 in os::abort(bool) () from /usr/lib/jvm/java-7-oracle/jre/lib/amd64/server/libjvm.so #3 0x00007fd921b33607 in VMError::report_and_die() () from /usr/lib/jvm/java-7-oracle/jre/lib/amd64/server/libjvm.so #4 0x00007fd9219b78af in JVM_handle_linux_signal () from /usr/lib/jvm/java-7-oracle/jre/lib/amd64/server/libjvm.so #5 <signal handler called> #6 0x00000000015b03b7 in impala::BufferedBlockMgr::Block::BytesRemaining (this=0x0) at /home/dev/Impala/be/src/runtime/buffered-block-mgr.h:169 #7 0x0000000001726829 in impala::Sorter::Run::UnpinAllBlocks (this=0xd476280) at /home/dev/Impala/be/src/runtime/sorter.cc:535 #8 0x0000000001729bd8 in impala::Sorter::AddBatch (this=0xc6216c0, batch=0x7fd86a6e6e50) at /home/dev/Impala/be/src/runtime/sorter.cc:998 #9 0x00000000016cd55f in impala::SortNode::SortInput (this=0xca4ae00, state=0xd8c6400) at /home/dev/Impala/be/src/exec/sort-node.cc:156 #10 0x00000000016cca0b in impala::SortNode::Open (this=0xca4ae00, state=0xd8c6400) at /home/dev/Impala/be/src/exec/sort-node.cc:76 #11 0x0000000001597c61 in impala::PlanFragmentExecutor::OpenInternal (this=0xca60228) at /home/dev/Impala/be/src/runtime/plan-fragment-executor.cc:334 #12 0x0000000001597a66 in impala::PlanFragmentExecutor::Open (this=0xca60228) at /home/dev/Impala/be/src/runtime/plan-fragment-executor.cc:320 #13 0x000000000137d2fe in impala::FragmentMgr::FragmentExecState::Exec (this=0xca60000) at /home/dev/Impala/be/src/service/fragment-exec-state.cc:50 #14 0x0000000001375e3d in impala::FragmentMgr::FragmentExecThread (this=0xc73ede0, exec_state=0xca60000) at /home/dev/Impala/be/src/service/fragment-mgr.cc:70 #15 0x0000000001379648 in boost::_mfi::mf1<void, impala::FragmentMgr, impala::FragmentMgr::FragmentExecState*>::operator() (this=0xf418420, p=0xc73ede0, a1=0xca60000) at /usr/include/boost/bind/mem_fn_template.hpp:165 #16 0x000000000137940b in boost::_bi::list2<boost::_bi::value<impala::FragmentMgr*>, boost::_bi::value<impala::FragmentMgr::FragmentExecState*> >::operator()<boost::_mfi::mf1<void, impala::FragmentMgr, impala::FragmentMgr::FragmentExecState*>, boost::_bi::list0> (this=0xf418430, f=..., a=...) at /usr/include/boost/bind/bind.hpp:313 #17 0x0000000001378d25 in boost::_bi::bind_t<void, boost::_mfi::mf1<void, impala::FragmentMgr, impala::FragmentMgr::FragmentExecState*>, boost::_bi::list2<boost::_bi::value<impala::FragmentMgr*>, boost::_bi::value<impala::FragmentMgr::FragmentExecState*> > >::operator() (this=0xf418420) at /usr/include/boost/bind/bind_template.hpp:20 #18 0x000000000137867a in boost::detail::function::void_function_obj_invoker0<boost::_bi::bind_t<void, boost::_mfi::mf1<void, impala::FragmentMgr, impala::FragmentMgr::FragmentExecState*>, boost::_bi::list2<boost::_bi::value<impala::FragmentMgr*>, boost::_bi::value<impala::FragmentMgr::FragmentExecState*> > >, void>::invoke (function_obj_ptr=...) at /usr/include/boost/function/function_template.hpp:153 #19 0x0000000001247a60 in boost::function0<void>::operator() (this=0x7fd86a6e7e00) at /usr/include/boost/function/function_template.hpp:767 #20 0x00000000014572a1 in impala::Thread::SuperviseThread(std::string const&, std::string const&, boost::function<void ()>, impala::Promise<long>*) (name=..., category=..., functor=..., thread_started=0x7fd86b768ea0) at /home/dev/Impala/be/src/util/thread.cc:314 #21 0x00000000014604d7 in boost::_bi::list4<boost::_bi::value<std::string>, boost::_bi::value<std::string>, boost::_bi::value<boost::function<void ()> >, boost::_bi::value<impala::Promise<long>*> >::operator()<void (*)(std::string const&, std::string const&, boost::function<void ()>, impala::Promise<long>*), boost::_bi::list0>(boost::_bi::type<void>, void (*&)(std::string const&, std::string const&, boost::function<void ()>, impala::Promise<long>*), boost::_bi::list0&, int) (this=0xca4b5c0, f=@0xca4b5b8: 0x1456f98 <impala::Thread::SuperviseThread(std::string const&, std::string const&, boost::function<void ()>, impala::Promise<long>*)>, a=...) at /usr/include/boost/bind/bind.hpp:457 #22 0x0000000001460421 in boost::_bi::bind_t<void, void (*)(std::string const&, std::string const&, boost::function<void ()>, impala::Promise<long>*), boost::_bi::list4<boost::_bi::value<std::string>, boost::_bi::value<std::string>, boost::_bi::value<boost::function<void ()> >, boost::_bi::value<impala::Promise<long>*> > >::operator()() (this=0xca4b5b8) at /usr/include/boost/bind/bind_template.hpp:20 #23 0x00000000014603e6 in boost::detail::thread_data<boost::_bi::bind_t<void, void (*)(std::string const&, std::string const&, boost::function<void ()>, impala::Promise<long>*), boost::_bi::list4<boost::_bi::value<std::string>, boost::_bi::value<std::string>, boost::_bi::value<boost::function<void ()> >, boost::_bi::value<impala::Promise<long>*> > > >::run() (this=0xca4b400) at /usr/include/boost/thread/detail/thread.hpp:117 #24 0x00007fd922d69a4a in ?? () from /usr/lib/x86_64-linux-gnu/libboost_thread.so.1.54.0 #25 0x00007fd922216182 in start_thread (arg=0x7fd86a6e8700) at pthread_create.c:312 #26 0x00007fd91fe6347d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:111